tests/fixtures/app/examples/fail_NoRepr.stderr
warning: add #[repr(u8)] above this to allow for valid error codes
 --> tests/fixtures/app/examples/fail_NoRepr.rs:6:1
  |
6 | enum NoRepr<T: _T> {
  | ^^^^^^^^^^^^^^^^^^^^
  |
note: this warning originates from the macro invocation here
 --> tests/fixtures/app/examples/fail_NoRepr.rs:5:17
  |
5 | #[derive(Debug, Termination)]
  |                 ^^^^^^^^^^^
  = note: this warning originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Termination requires explicit discriminants to specify the correct ExitCodes
 --> tests/fixtures/app/examples/fail_NoRepr.rs:5:17
  |
5 | #[derive(Debug, Termination)]
  |                 ^^^^^^^^^^^
  |
help: add `= n` after this
 --> tests/fixtures/app/examples/fail_NoRepr.rs:7:5
  |
7 |     Ok(T),
  |     ^^^^^
  = note: this error originates in the derive macro `Termination` (in Nightly builds, run with -Z macro-backtrace for more info)
